--- a/.github/workflows/generate-installer.yml
+++ b/.github/workflows/generate-installer.yml
@@ -34,7 +34,7 @@ env:
 jobs:
   build:
     runs-on: macos-latest
-    if: github.repository == 'Fats768/Fats'
+    if: github.repository == 'Fats768/Dowmload-macOS'
     steps:
       - uses: actions/checkout@v4
       
